--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       align-items: center;
       height: 100vh;
     }
+    button {
+  touch-action: manipulation;
+}
+
 
     h2 {
       text-align: center;
